--- a/bin/lib/.gitignore
+++ b/bin/lib/.gitignore
@@ -2,3 +2,4 @@
 /TempTestSuite1566630079667.class
 /TempTestCase1566630872404.class
 /TempTestSuite1566630991768.class
+/TempTestCase1566631531378.class
