--- a/bin/lib/.gitignore
+++ b/bin/lib/.gitignore
@@ -3,3 +3,5 @@
 /TempTestCase1566630872404.class
 /TempTestSuite1566630991768.class
 /TempTestCase1566631531378.class
+/TempTempCase1566633983353.class
+/TempTestCase1566634240487.class
