--- a/.classpath
+++ b/.classpath
@@ -117,6 +117,7 @@
 	<classpathentry kind="lib" path="/Applications/Katalon Studio.app/Contents/Eclipse/configuration/plugin/install/18146/1.0.5/katalon-studio-report-plugin.jar"/>
 	<classpathentry kind="lib" path="/Applications/Katalon Studio.app/Contents/Eclipse/configuration/plugin/install/18153/1.0.0/Katalon Browserstack.jar"/>
 	<classpathentry kind="lib" path="/Applications/Katalon Studio.app/Contents/Eclipse/configuration/plugin/install/18143/1.0.0/katalon-studio-uploadfile-plugin.jar"/>
+	<classpathentry kind="lib" path="/Applications/Katalon Studio.app/Contents/Eclipse/configuration/plugin/install/21789/1.2.0/Katalon Gmail.jar"/>
 	<classpathentry kind="lib" path="/Applications/Katalon Studio.app/Contents/Eclipse/configuration/plugin/install/18152/1.0.1/DropdownAngularJS.jar"/>
 	<classpathentry kind="lib" path="/Applications/Katalon Studio.app/Contents/Eclipse/configuration/plugin/install/18150/1.0.0/katalon-studio-ashot-plugin.jar"/>
 	<classpathentry kind="lib" path="/Applications/Katalon Studio.app/Contents/Eclipse/configuration/plugin/install/18151/1.0.0/katalon-studio-DragAndDrop-plugin.jar"/>
