--- a/settings/internal/com.kms.katalon.integration.analytics.properties
+++ b/settings/internal/com.kms.katalon.integration.analytics.properties
@@ -1,13 +1,13 @@
-#Thu Aug 22 19:39:42 WIB 2019
+#Sun Aug 25 05:36:43 WIB 2019
 analytics.authentication.password="QC6RYhlwwLSOiA/XBoBtbA\=\="
 analytics.integration.enable=true
-analytics.authentication.token="w8L/iBopZhBH5jN/pWS/jCl5bQqN/5OxeSB2eS1gXjXV7ACUy+ZAhg\=\="
+analytics.authentication.token="mInTKurg9KjHyzo9MvI2kzw5eCRB2EzO0mGAsParuKk8N7Ep2BIpfA\=\="
 analytics.server.endpoint="JkYzbGlbK9hM2kll81qSoXfzapQDQgaKmEIPN3wKSiw\="
 analytics.authentication.email="qza2+m7iZcaKWKzZNszxJQu+RNavGC0T"
 analytics.authentication.encryptionEnabled=true
 analytics.team="{\\n  \\"id\\"\: 22690,\\n  \\"role\\"\: \\"OWNER\\",\\n  \\"name\\"\: \\"Team ipropio\\"\\n}"
 analytics.project="{\\n  \\"id\\"\: 29176,\\n  \\"name\\"\: \\"ipropio\\",\\n  \\"teamId\\"\: 22690\\n}"
-analytics.testresult.autosubmit=false
-analytics.testresult.attach.screenshot=false
+analytics.testresult.autosubmit=true
+analytics.testresult.attach.screenshot=true
 analytics.testresult.attach.log=true
 analytics.testresult.attach.capturedvideos=false
